Fixed after static code check and fixed some typos too